# mooshroom

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
src/mooshroom/: auth.py  cli.py  config.py  console.py  java.py  launcher.py  profiles.py  versions.py
