[project]
name = "mooshroom"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=14.3.3",
]

[project.scripts]
mooshroom = "mooshroom.cli:main"

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mooshroom"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
